--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@ layout: compress
   <head>
     {% include head.html %}
     {% include head/custom.html %}
+    <link rel="stylesheet" href="{{ '/assets/css/custom-cv.css' | relative_url }}">
   </head>
 
   <body>
